developing backdrop filter 1

--- a/Backdrop_filter/index.html
+++ b/Backdrop_filter/index.html
@@ -10,9 +10,13 @@
     <div class="container">        
     </div>
     <div class="box">
-        <h2>Aritri Das</h2>
+        <img src="dp.jpg" alt="profile" height="230px" width="230px">
+        <h1>Aritri Das</h1>
+        <hr color=rgba(255,255,255,0.5)>
         <h4>National Institute of Technology, NIT</h4>
         <p>Computer Science of Engineer</p>
+        <p><b>Email:</b>  dasaritri07@gmail.com</p>
+        <p><b>Mob: </b> 977xxxxxxx / 878xxxxxxx</p>
     </div>
 </body>
 </html>
