--- a/Backdrop_filter/index.html
+++ b/Backdrop_filter/index.html
@@ -14,7 +14,7 @@
         <h1>Aritri Das</h1>
         <hr color=rgba(255,255,255,0.5)>
         <h4>National Institute of Technology, NIT</h4>
-        <p>Computer Science of Engineer</p>
+        <h5>Computer Science of Engineer</h5>
         <p><b>Email:</b>  dasaritri07@gmail.com</p>
         <p><b>Mob: </b> 977xxxxxxx / 878xxxxxxx</p>
     </div>
