--- a/Chat_bubble/index.html
+++ b/Chat_bubble/index.html
@@ -7,10 +7,11 @@
     <title>Chat Bubble</title>
 </head>
 <body>
-    <div class="container">
-        <textarea name="chat" id="chat">Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-            Omnis corrupti amet expedita dolorem animi non eaque harum excepturi autem sint?
-        </textarea> 
+    <div class="talkbubble">
+        <div class="bubble">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis corrupti amet expedita dolorem animi non eaque harum excepturi autem sint?
+            </p>
+        </div> 
     </div>
 </body>
 </html>
