--- a/Skewed-border/index.html
+++ b/Skewed-border/index.html
@@ -12,8 +12,7 @@
             <div class="content">
                 <h2>01</h2>
                 <h3>Service One</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
-                    Quae enim harum quidem vitae odio sed, commodi exercitationem aperiam numquam, accusamus delectus sint. Distinctio, mollitia perspiciatis expedita provident, quia tempore numquam odit earum voluptas assumenda officiis pariatur a nihil placeat, delectus modi autem voluptates debitis dolorem veniam laboriosam. Autem, itaque?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ea.
             </div>
         </div>
         <div class="box">
@@ -21,15 +20,11 @@
                 <h2>02</h2>
                 <h3>Service Two</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
-                    Quae enim harum quidem vitae odio sed, commodi exercitationem aperiam numquam, accusamus delectus sint. Distinctio, mollitia perspiciatis expedita provident, quia tempore numquam odit earum voluptas assumenda officiis pariatur a nihil placeat, delectus modi autem voluptates debitis dolorem veniam laboriosam. Autem, itaque?</p>
-            </div>
-        </div>
         <div class="box">
             <div class="content">
                 <h2>03</h2>
                 <h3>Service Three</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
-                    Quae enim harum quidem vitae odio sed, commodi exercitationem aperiam numquam, accusamus delectus sint. Distinctio, mollitia perspiciatis expedita provident, quia tempore numquam odit earum voluptas assumenda officiis pariatur a nihil placeat, delectus modi autem voluptates debitis dolorem veniam laboriosam. Autem, itaque?</p>
             </div>
         </div>
         <div class="box">
@@ -37,7 +32,6 @@
                 <h2>04</h2>
                 <h3>Service Four</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
-                    Quae enim harum quidem vitae odio sed, commodi exercitationem aperiam numquam, accusamus delectus sint. Distinctio, mollitia perspiciatis expedita provident, quia tempore numquam odit earum voluptas assumenda officiis pariatur a nihil placeat, delectus modi autem voluptates debitis dolorem veniam laboriosam. Autem, itaque?</p>
             </div>
         </div>
     </div>
