--- a/Skewed-border/index.html
+++ b/Skewed-border/index.html
@@ -13,25 +13,31 @@
                 <h2>01</h2>
                 <h3>Service One</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ea.
+                <a href="#">Read More</a>
             </div>
         </div>
         <div class="box">
             <div class="content">
                 <h2>02</h2>
                 <h3>Service Two</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ea.
+                <a href="#">Read More</a>
+            </div>
+        </div>
         <div class="box">
             <div class="content">
                 <h2>03</h2>
                 <h3>Service Three</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ea.
+                <a href="#">Read More</a>
             </div>
         </div>
         <div class="box">
             <div class="content">
                 <h2>04</h2>
                 <h3>Service Four</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. 
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam nam facere aut quia quibusdam veniam modi, similique est a. Lorem ipsum dolor sit amet consectetur adipisicing elit. In, ea.
+                <a href="#">Read More</a>
             </div>
         </div>
     </div>
