Change to blog page

--- a/Blog_Page/index.html
+++ b/Blog_Page/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h2 style="text-align: center;">Blog Post Title</h2>
+        <h2 style="text-align: center; font-size: 2.4rem;">Blog Post Title</h2>
         <div class="blog">
             Women's empowerment is the process of empowering women. Empowerment can be defined in many ways, 
             however, when talking about women's empowerment, empowerment means accepting and allowing people (women) 
