--- a/Card_view_effect/index.html
+++ b/Card_view_effect/index.html
@@ -7,6 +7,29 @@
     <title>Card View Effect</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="cards">
+            <div class="card">
+              <h3>Card Title</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card">
+              <h3>Card Title</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card">
+              <h3>Card Title</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card">
+              <h3>Card Title</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+            <div class="card">
+              <h3>Card Title</h3>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            </div>
+        </div>
+    </div>    
 </body>
 </html>
