--- a/Clock/index.html
+++ b/Clock/index.html
@@ -7,9 +7,11 @@
     <title>Digital Clock</title>
 </head>
 <body>
-    <div class="container">
-        <div class="clock">
-            
+    <div class="clock">
+        <div class="time">
+            <div><span id="hour">00</span>Hours</div>
+            <div><span id="minute">00</span>Minutes</div>
+            <div><span id="second">00</span>Seconds</div>
         </div>
     </div>
 
