--- a/Clock/index.html
+++ b/Clock/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&display=swap" rel="stylesheet">
     <title>Digital Clock</title>
 </head>
 <body>
     <div class="clock">
         <div class="time">
-            <div><span id="hour">00</span>Hours</div>
-            <div><span id="minute">00</span>Minutes</div>
-            <div><span id="second">00</span>Seconds</div>
+            <div><span id="hour">00</span><span id="hours">Hours</span></div>
+            <div><span id="minute">00</span><span id="minutes">Minutes</span></div>
+            <div><span id="second">00</span><span id="seconds">Seconds</span></div>
         </div>
     </div>
 
