--- a/Clock/index.html
+++ b/Clock/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="clock">
         <div class="time">
-            <div><span id="hour">00</span><span id="hours">Hours</span></div>
-            <div><span id="minute">00</span><span id="minutes">Minutes</span></div>
-            <div><span id="second">00</span><span id="seconds">Seconds</span></div>
+            <div><span id="hours">00</span><span>Hours</span></div>
+            <div><span id="minutes">00</span><span>Minutes</span></div>
+            <div><span id="seconds">00</span><span>Seconds</span></div>
         </div>
     </div>
 
