--- a/Clock/index.html
+++ b/Clock/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="clock">
         <div class="time">
-            <div><span id="hours">00</span><span>Hours</span></div>
-            <div><span id="minutes">00</span><span>Minutes</span></div>
-            <div><span id="seconds">00</span><span>Seconds</span></div>
+            <div><span id="hours">00</span><span>hrs</span></div>
+            <div><span id="minutes">00</span><span>mins</span></div>
+            <div><span id="seconds">00</span><span>secs</span></div>
         </div>
     </div>
 
