--- a/Moving-car/index.html
+++ b/Moving-car/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="road"></div>
+        <div class="city"></div>
     </div>
 </body>
 </html>
