--- a/Moving-car/index.html
+++ b/Moving-car/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <div class="road"></div>
         <div class="city"></div>
+        <div class="car">
+            <img src="car.png" alt="c">
+        </div>
     </div>
 </body>
 </html>
