--- a/Moving-car/index.html
+++ b/Moving-car/index.html
@@ -11,7 +11,10 @@
         <div class="road"></div>
         <div class="city"></div>
         <div class="car">
-            <img src="car.png" alt="c">
+            <img src="car.png" alt="car">
+        </div>
+        <div class="wheel">
+            <img src="wheel.png" alt="wheel">
         </div>
     </div>
 </body>
