--- a/Moving-car/index.html
+++ b/Moving-car/index.html
@@ -14,7 +14,8 @@
             <img src="car.png" alt="car">
         </div>
         <div class="wheel">
-            <img src="wheel.png" alt="wheel">
+            <img src="wheel.png" alt="wheel-b" class="back-wheel">
+            <img src="wheel.png" alt="wheel-b" class="front-wheel">
         </div>
     </div>
 </body>
