--- a/Moving-car/index.html
+++ b/Moving-car/index.html
@@ -7,7 +7,7 @@
     <title>Moving Home</title>
 </head>
 <body>
-    <div class="container">
+    <div class="sky">
         <div class="road"></div>
         <div class="city"></div>
         <div class="car">
