--- a/Animated-background/index.html
+++ b/Animated-background/index.html
@@ -7,6 +7,17 @@
     <title>Animated Background</title>
 </head>
 <body>
-    
+    <div class="home">
+        <ul>
+            <li>Home</li>
+            <li>Resume</li>
+            <li>Services</li>
+            <li>Contact</li>
+            <li>About</li>
+        </ul>
+    </div>
+    <div class="animation-area">
+        
+    </div>
 </body>
 </html>
