--- a/Animated-background/index.html
+++ b/Animated-background/index.html
@@ -15,9 +15,17 @@
             <li>Contact</li>
             <li>About</li>
         </ul>
+        <h2>Welcome Everyone!!</h2>
     </div>
     <div class="animation-area">
-        
+        <ul class="box-area">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
     </div>
 </body>
 </html>
