--- a/Animated-background/index.html
+++ b/Animated-background/index.html
@@ -4,28 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Piedra&family=Quattrocento:wght@700&display=swap" rel="stylesheet">
     <title>Animated Background</title>
 </head>
 <body>
-    <div class="home">
-        <ul>
-            <li>Home</li>
-            <li>Resume</li>
-            <li>Services</li>
-            <li>Contact</li>
-            <li>About</li>
-        </ul>
-        <h2>Welcome Everyone!!</h2>
-    </div>
-    <div class="animation-area">
-        <ul class="box-area">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+    <div class="container">
+        <div class="home">
+            <ul>
+                <li>Home</li>
+                <li>Resume</li>
+                <li>Services</li>
+                <li>Contact</li>
+                <li>About</li>
+            </ul>
+            <h2 style="font-family: 'Piedra', cursive;">Welcome Everyone!!</h2>
+        </div>
+        <div class="animation-area">
+            <ul class="box-area">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
