--- a/Animated-background/index.html
+++ b/Animated-background/index.html
@@ -17,7 +17,11 @@
                 <li>Contact</li>
                 <li>About</li>
             </ul>
-            <h2 style="font-family: 'Piedra', cursive;">Welcome Everyone!!</h2>
+            <h2 style="font-family: 'Piedra', cursive;">@arivek.com</h2>
+            <div class="input">
+                <input type="text" placeholder="Search....">
+                <button class="btn">Search</button>
+            </div>
         </div>
         <div class="animation-area">
             <ul class="box-area">
