--- a/Text-animation-effect/index.html
+++ b/Text-animation-effect/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap" rel="stylesheet">
     <title>Text Animation</title>
 </head>
 <body>
     <div class="container">
-        
+        <h2><span>P</span>arcticles Di<span>st</span>ortion Effect</h2>
     </div>
 </body>
 </html>
