--- a/Text-animation-effect/index.html
+++ b/Text-animation-effect/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <video src="particles.mp4" muted="" autoplay=""></video>
         <h2><span>P</span>arcticles Di<span>st</span>ortion Effect</h2>
     </div>
 </body>
