--- a/Video-inside-text/index.html
+++ b/Video-inside-text/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="banner">
-        
+        <video src="video.mp4" type="video/mp4" autoplay muted loop></video>
+        <h2>VIDEO</h2>
     </div>
 </body>
 </html>
