--- a/Animated-Box-Design/index.html
+++ b/Animated-Box-Design/index.html
@@ -8,7 +8,19 @@
 </head>
 <body>
     <div class="square">
-        
+        <span></span>
+        <span></span>
+        <span></span>
+        <div class="content">
+            <h2>Post Title</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Ex accusamus consectetur repellat, nisi quisquam laudantium 
+                reiciendis saepe, atque sequi pariatur amet dolorem autem 
+                officiis assumenda 
+                quia laboriosam. Maiores, est molestiae!
+            </p>
+            <a href="#">Read More</a>
+        </div>
     </div>
 </body>
 </html>
