--- a/Card-hover-effect/index.html
+++ b/Card-hover-effect/index.html
@@ -8,7 +8,42 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="card">
+            <div class="img">
+                <img src="img1.jpg" alt="">
+            </div>
+            <div class="content">
+                <h2>Card One</h2>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Ducimus fugiat ipsum, sequi nulla 
+                    praesentium tempore porro vitae amet dignissimos sint.
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="img">
+                <img src="img2.jpg" alt="">
+            </div>
+            <div class="content">
+                <h2>Card Two</h2>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Ducimus fugiat ipsum, sequi nulla 
+                    praesentium tempore porro vitae amet dignissimos sint.
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="img">
+                <img src="img3.jpg" alt="">
+            </div>
+            <div class="content">
+                <h2>Card Three</h2>
+                <p>Lorem ipsum dolor sit amet consectetur 
+                    adipisicing elit. Ducimus fugiat ipsum, sequi nulla 
+                    praesentium tempore porro vitae amet dignissimos sint.
+                </p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
