--- a/Card-hover-effect/index.html
+++ b/Card-hover-effect/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="card">
-            <div class="img">
+            <div class="img-box">
                 <img src="img.jpeg" alt="">
             </div>
             <div class="content">
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="img">
+            <div class="img-box">
                 <img src="img.jpeg" alt="">
             </div>
             <div class="content">
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="card">
-            <div class="img">
+            <div class="img-box">
                 <img src="img.jpeg" alt="">
             </div>
             <div class="content">
