--- a/Card-hover-effect/index.html
+++ b/Card-hover-effect/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="card">
             <div class="img-box">
-                <img src="img.jpeg" alt="">
+                <img src="img1.jpg" alt="">
             </div>
             <div class="content">
                 <h2>Card One</h2>
@@ -22,7 +22,7 @@
         </div>
         <div class="card">
             <div class="img-box">
-                <img src="img.jpeg" alt="">
+                <img src="img2.jpg" alt="">
             </div>
             <div class="content">
                 <h2>Card Two</h2>
@@ -34,7 +34,7 @@
         </div>
         <div class="card">
             <div class="img-box">
-                <img src="img.jpeg" alt="">
+                <img src="img3.jpg" alt="">
             </div>
             <div class="content">
                 <h2>Card Three</h2>
