--- a/Mouseover-3D/index.html
+++ b/Mouseover-3D/index.html
@@ -31,13 +31,10 @@
     </div>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
-        VanillaTilt.init(document.querySelector(".your-element"), {
+        VanillaTilt.init(document.querySelector(".img-box"), {
             max: 25,
             speed: 400
         });
-        
-        //It also supports NodeList
-        VanillaTilt.init(document.querySelectorAll(".your-element"));
     </script>
 </body>
 </html>
