--- a/Mouseover-3D/index.html
+++ b/Mouseover-3D/index.html
@@ -31,7 +31,7 @@
     </div>
     <script type="text/javascript" src="vanilla-tilt.js"></script>
     <script type="text/javascript">
-        VanillaTilt.init(document.querySelector(".img-box"), {
+        VanillaTilt.init(document.querySelectorAll(".card"), {
             max: 25,
             speed: 400
         });
