--- a/Soft-box-shadow/index.html
+++ b/Soft-box-shadow/index.html
@@ -8,11 +8,21 @@
 </head>
 <body>
     <div class="container">
-        <div class="image">
-            <img src="fish.png" alt="fish">
+        <div class="box">
+            <div class="image">
+                <img src="turtle.png" alt="fish">
+            </div>
+            <div class="image">
+                <img src="elephant.png" alt="bottle">
+            </div>
         </div>
-        <div class="image">
-            <img src="bottle.svg" alt="bottle">
+        <div class="box">
+            <div class="image">
+                <img src="unicorn.png" alt="fish">
+            </div>
+            <div class="image">
+                <img src="shark.png" alt="bottle">
+            </div>
         </div>
     </div>
 </body>
