--- a/Soft-box-shadow/index2.html
+++ b/Soft-box-shadow/index2.html
@@ -10,18 +10,18 @@
     <div class="container">
         <div class="box">
             <div class="image">
-                <img src="turtle.png" alt="fish">
+                <img src="cat.png" alt="fish">
             </div>
             <div class="image">
-                <img src="elephant.png" alt="bottle">
+                <img src="unicorn1.png" alt="bottle">
             </div>
         </div>
         <div class="box">
             <div class="image">
-                <img src="unicorn.png" alt="fish">
+                <img src="dragon.png" alt="fish">
             </div>
             <div class="image">
-                <img src="shark.png" alt="bottle">
+                <img src="fish1.png" alt="bottle">
             </div>
         </div>
     </div>
