--- a/Comparison-slider/index.html
+++ b/Comparison-slider/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="slide slide-1">
+            <img src="people.jpg" alt="people">
+        </div>
+        <div class="slide slide-2">
+            <img src="winters.jpg" alt="winter">
+        </div>
     </div>
 </body>
 </html>
