--- a/Comparison-slider/index.html
+++ b/Comparison-slider/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <div class="slide slide-1">
-            <img src="people.jpg" alt="people">
-        </div>
-        <div class="slide slide-2">
-            <img src="winters.jpg" alt="winter">
-        </div>
+        <div class="slide slide-1"></div>
+        <div class="slide slide-2" id="slide"></div>
     </div>
+    <script type="text/javascript">
+        let slide = document.querySelector('#slide');
+        window.onmousemove = function(e) {
+            let x = e.clientX;
+            slide.style.left = x+'px';
+        }
+    </script>
 </body>
 </html>
