--- a/Login/index.html
+++ b/Login/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div class="container">
-        
+        <div class="image">
+            <img src="img1.png" alt="image">
+        </div>
+        <div class="box-content">
+            <h2>Login</h2>
+            <input type="text" placeholder="Username">
+            <input type="password" placeholder="Password">
+        </div>
     </div>
 </body>
 </html>
